Add snapshot framework for integration test analysis properties